--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
   			<div class="flost-right">
          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="">HOME</a>
-            </li>
-
-            <li class="nav-item">
               <a class="nav-link" href="#servicos">SERVIÇOS</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="">SOBRE</a>
+              <a class="nav-link" href="">TABELA DE PREÇOS </a>
             </li> 
+
+            <li class="nav-item">
+              <a class="nav-link" href="">ENDEREÇO</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="">CONTATO</a>
+            </li>
+
             <li class="nav-item">
             	<a class="nav-link" href="#cards"></a>
             </li>
@@ -40,9 +45,9 @@
     <div class="container">
     <div class="jumbotron">
       <h1 class="display-4">Luiz Felipe, automação!</h1>
-        <p class="lead">Programação Web, Desenvolvimento de Sites, Web design e tudo que você precisa para automatizar a sua empresa, gerar mais lucros e facilitar o seu trabalho, através da informação rápida e comodidade de um SITE PRÓPRIO, COM TODOS OS RECURSOS E MACANISMOS QUE QUISER.S</p>
+        <p class="lead">Programação Web, Desenvolvimento de Sites, Web design e tudo que você precisa para automatizar a sua empresa, gerar mais lucros e facilitar o seu trabalho, através da informação rápida e comodidade.</p>
       <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>ATRAVÉS DO SEU PRÓPRIO SITE, COM TODOS OS RECURSOS E MACANISMOS QUE QUISER.</p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Saiba Mais</a>
     </div>
 <!-------------------------FINAL DO JUMBOTRON------------------------->
@@ -55,7 +60,7 @@
     <img class="card-img-top" src="img/webdesign.jpg" alt="Web Design">
     <div class="card-body">
       <h5 class="card-title">Web Design</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">É responsável por projetar e desenhar web sites, blogs, sistemas e aplicativos web. Seu papel é criar a interface gráfica do site, onde ocorrerá toda interação do usuário, portanto é importante que o web designer tenha em mente atributos como: facilidade de uso do site e emoções que o design pode despertar no usuário, dessa forma seu design será mais eficiente. Podemos comparar o designer a um artista.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Saiba Mais</a>
     </div>
@@ -64,7 +69,9 @@
     <img class="card-img-top" src="img/html.jpg" alt="HTML">
     <div class="card-body">
       <h5 class="card-title">HTML</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">HTML é uma das linguagens que utilizamos para desenvolver websites. O acrônimo HTML vem do inglês e significa Hypertext Markup Language ou em português Linguagem de Marcação de Hipertexto.</p>
+      
+      <p> O HTML é a liguagem base da internet. Foi criada para ser de fácil entendimento por seres humanos e também por máquinas, como por exemplo o Google ou outros sistemas que percorrem a internet capturando informação.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 		<a class="btn btn-primary btn-lg" href="#" role="button">Saiba Mais</a>
     </div>
@@ -72,8 +79,10 @@
   <div class="card">
     <img class="card-img-top" src="img/web.jpg" alt="WEB">
     <div class="card-body">
-      <h5 class="card-title">Programação WEB</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Desenvolvimento WEB</h5>
+      <p class="card-text">O desenvolvimento web se trata da criação de um software, seja ele um sistema, um app, um portal ou um site, que está conectado a uma rede, podendo ser internet ou intranet (uma rede interna). Softwares web são desenvolvidos para realizar operações em tempo real.</p>
+      
+      <p>Hoje, a maior parcela do que é desenvolvido é feito para web, permitindo conectividade, integração entre diferentes softwares e ações com resultados instantâneos.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Saiba Mais</a>
     </div>
@@ -84,17 +93,21 @@
   <div class="card">
     <img class="card-img-top" src="img/webdesign.jpg" alt="Web Design">
     <div class="card-body">
-      <h5 class="card-title">Web Design</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <img class="card-img-top" src="img/frontend.jpg" width="800" height="600" alt="Front-end">
+      <h5 class="card-title">FRONT-END</h5>
+      <p class="card-text">Front-end é a parte que o usuário vê na tela do computador, e com a qual interage. Ou seja, a frente do site, plataforma ou sistema. O desenvolvimento do front-end depende de 3 conceitos: uma linguagem de marcação (HTML), uma linguagem de estilo (CSS) e uma linguagem de script ou interpretada (JavaScript).</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       <a class="btn btn-primary btn-lg" href="#" role="button">Saiba Mais</a>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="img/html.jpg" alt="HTML">
+    <img class="card-img-top" src="img/html.jpg" width="800" height="600" alt="HTML">
     <div class="card-body">
-      <h5 class="card-title">HTML</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <img class="card-img-top" src="img/backend.jpg" alt="Back-end">
+      <h5 class="card-title">BACK-END</h5>
+      <p class="card-text">A “parte de baixo do iceberg” é o Back-end.</p><br>
+      <p>Todo site tem que estar hospedado em um servidor (seja da Google, Amazon entre outros) e é lá onde ficam guardadas as informações, como banco de dados, login e senha além de todos os sistemas e processamento de dados. Nós, da Kingly Studio, usamos principalmente PHP para programar e MySQL como banco de dados, mas diversas outras linguagens de programação podem ser usadas, como Python e Ruby on Rails, que são atualmente as mais populares e difundidas.</p>
+
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 		<a class="btn btn-primary btn-lg" href="#" role="button">Saiba Mais</a>
     </div>
