--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 
 <div class="card-group">
   <div class="card">
-    <img class="card-img-top" src="img/webdesign.jpg" alt="Web Design">
+    <img class="card-img-top" src="img/frontend.jpg" width="500" height="500" alt="Front-end">
     <div class="card-body">
-      <img class="card-img-top" src="img/frontend.jpg" width="800" height="600" alt="Front-end">
       <h5 class="card-title">FRONT-END</h5>
       <p class="card-text">Front-end é a parte que o usuário vê na tela do computador, e com a qual interage. Ou seja, a frente do site, plataforma ou sistema. O desenvolvimento do front-end depende de 3 conceitos: uma linguagem de marcação (HTML), uma linguagem de estilo (CSS) e uma linguagem de script ou interpretada (JavaScript).</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -101,9 +100,8 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="img/html.jpg" width="800" height="600" alt="HTML">
+    <img class="card-img-top" src="img/backend.jpg" width="500" height="500" alt="Back-end">
     <div class="card-body">
-      <img class="card-img-top" src="img/backend.jpg" alt="Back-end">
       <h5 class="card-title">BACK-END</h5>
       <p class="card-text">A “parte de baixo do iceberg” é o Back-end.</p><br>
       <p>Todo site tem que estar hospedado em um servidor (seja da Google, Amazon entre outros) e é lá onde ficam guardadas as informações, como banco de dados, login e senha além de todos os sistemas e processamento de dados. Nós, da Kingly Studio, usamos principalmente PHP para programar e MySQL como banco de dados, mas diversas outras linguagens de programação podem ser usadas, como Python e Ruby on Rails, que são atualmente as mais populares e difundidas.</p>
@@ -122,7 +120,7 @@
     </div>
   </div>
 </div>
-	<br>
+<br>
 <!-------------------------FINAL DO CARDS------------------------->
 
 
