--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <div class="card-group">
   <div class="card">
-    <img class="card-img-top" src="img/frontend.jpg" width="500" height="500" alt="Front-end">
+    <img class="card-img-top" src="img/frontend.jpg" width="400" height="200" alt="Front-end">
     <div class="card-body">
       <h5 class="card-title">FRONT-END</h5>
       <p class="card-text">Front-end é a parte que o usuário vê na tela do computador, e com a qual interage. Ou seja, a frente do site, plataforma ou sistema. O desenvolvimento do front-end depende de 3 conceitos: uma linguagem de marcação (HTML), uma linguagem de estilo (CSS) e uma linguagem de script ou interpretada (JavaScript).</p>
@@ -100,10 +100,10 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="img/backend.jpg" width="500" height="500" alt="Back-end">
+    <img class="card-img-top" src="img/backend.jpg" width="400" height="200" alt="Back-end">
     <div class="card-body">
       <h5 class="card-title">BACK-END</h5>
-      <p class="card-text">A “parte de baixo do iceberg” é o Back-end.</p><br>
+      <p class="card-text">A “parte de baixo do iceberg” é o Back-end.</p>
       <p>Todo site tem que estar hospedado em um servidor (seja da Google, Amazon entre outros) e é lá onde ficam guardadas as informações, como banco de dados, login e senha além de todos os sistemas e processamento de dados. Nós, da Kingly Studio, usamos principalmente PHP para programar e MySQL como banco de dados, mas diversas outras linguagens de programação podem ser usadas, como Python e Ruby on Rails, que são atualmente as mais populares e difundidas.</p>
 
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
